--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "@radix-ui/themes": "^2.0.0",
+    "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "easymde": "^2.18.0",
     "next": "14.0.1",
