--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^2.0.0",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
+    "delay": "^6.0.0",
     "easymde": "^2.18.0",
     "next": "14.0.1",
     "prisma": "^5.5.2",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.4"
   },
