--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "classnames": "^2.3.2",
     "delay": "^6.0.0",
     "easymde": "^2.18.0",
-    "next": "14.0.1",
+    "next": "^14.0.4",
     "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
