--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@radix-ui/themes": "^2.0.0",
     "axios": "^1.6.0",
@@ -17,6 +18,7 @@
     "delay": "^6.0.0",
     "easymde": "^2.18.0",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
