--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@radix-ui/themes": "^2.0.0",
+    "@tanstack/react-query": "^5.17.7",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "delay": "^6.0.0",
